Fixed chat window cutoff by header

--- a/app/assets/stylesheets/chatbot.scss
+++ b/app/assets/stylesheets/chatbot.scss
@@ -20,6 +20,7 @@
   bottom: 20px;
   right: 20px;
   height: 90vh;
+  max-height: calc(100vh - 70px);
 }
 
 // Messages window
